# InventoryOptimizer

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/web/: Dockerfile  next.config.mjs  package-lock.json  package.json
apps/web/prisma/: schema.prisma
apps/web/scripts/: set-password.mjs
apps/web/src/: middleware.ts
apps/web/src/components/: ApiKeysManager.tsx  ClassificationForm.tsx  IngestionPanel.tsx  LocaleSwitcher.tsx  LoginForm.tsx  MastersManager.tsx  Nav.tsx  PlaceholderPage.tsx  SettingsForm.tsx  StatCard.tsx  TableCard.tsx  ThemeScript.tsx  ThemeToggle.tsx
apps/web/src/i18n/: routing.ts
apps/web/src/lib/: apikeys-actions.ts  apikeys.ts  auth-actions.ts  auth.ts  classification-actions.ts  classification.ts  csv.ts  dashboard.ts  engine.ts  format.ts  ingestion-actions.ts  ingestion-persist.ts  ingestion-ui.ts  ingestion.ts  masters-actions.ts  masters.ts  password.ts  prisma.ts  results.ts  (+5 more)
db/ddl/: functions.sql  schema.sql
db/seeds/: seed.sql
docs/intent/: inventory-optimizer.md
docs/spec/: data-model.md  ingestion-contracts.md  inventory-optimizer.md  scaffolding.md
services/engine/: pyproject.toml
services/engine/app/: __init__.py  db.py  main.py
services/engine/app/core/: __init__.py  abc.py  censored.py  statistics.py  targets.py
services/engine/app/engines/: __init__.py  impact.py  purchasing.py  redistribution.py
services/engine/app/jobs/: __init__.py  run.py  seed_demo.py
services/engine/tests/: test_abc.py  test_censored.py  test_purchasing.py  test_redistribution.py  test_statistics.py  test_targets.py
(+22 files in other folders)
